fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -354,8 +354,8 @@ input:where([type="text"], [type="email"], ) {
 /* footer navigation */
 
 .footer-nav {
-  columns: 3;
-  gap: clamp(var(--size-200), 30vw, var(--size-900));
+  columns: 2;
+  gap: clamp(var(--size-100), 30vw, var(--size-900));
 }
 
 .footer-nav a {
